2005-04-25  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b14)

	* Added support for the applet to force the version of Gallery
	  it's embedded in, to overcome instances of Apache sending
	  a 200 error code even though gallery_remote2.php doesn't exist
	  instead of 404 (in G2).

2005-04-22  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b13)

	* Fixed error message for self-signed cert to point to GR documentation.

2005-03-01  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b12)

	* Should support Mambo-embedded Gallery.

2005-02-28  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b11)

	* Fixed setting proxy info for downloading images already
	  on server.
	* Yet another attempt at fixing applet URL logic. Added a
	  manual gr_url_override applet parameter as a fix
	  for people whose Gallery URLs hopelessly confuse GR.
	* Applet jars are signed with the new cert, which expires
	  in 2007.

2005-01-23  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b10)

	* Fixed mis-caching of files downloaded from the server
	  (most problematic during a slideshow).
	* Added Mandarin translation (thanks to Nica Liu).

2005-01-09  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b9)

	* Fixed drop target indication when dropping to the last
	  item in the list and the list is taller than the window.
	* When connecting to an HTTPS server that uses a certificate
	  that is not signed by a trusted root-CA, no longer displaying
	  alert (the URL in the alert was no longer valid, anyway).
	* Decode HTML entities in captions for slideshow.
	* Added a patch by Frode Tviberg that finally fixes Linux DnD.
	* Added Romanian language support from Dragos Neagu.

2005-01-06  Bharat Mediratta  <bharat@menalto.com> (1.4.2-b8)

	* Added support for passing the browser's User-Agent string into the
	  applet as a parameter so that the applet can pretend that it is the
	  same browser when it communicates with the server.

2004-10-18  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b7)

	* More fixes for crop UI.
