@@ -1,3 +1,9 @@
+2005-04-27  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b15)
+
+	* Added support for an arbitrary number of cookies to be passed
+	  to the applets, with the applet parameters gr_cookie/n/_name
+	  and gr_cookie/n/_value where /n/ starts with 1 and are consecutive.
+
 2005-04-25  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b14)
 
 	* Added support for the applet to force the version of Gallery
